# aardwolf-social

./: .gitignore  Cargo.toml  README.md  package-lock.json
.cargo/: config.toml
.github/workflows/: docker.yml
aardwolf-actix/: Cargo.toml
aardwolf-actix/src/: lib.rs
aardwolf-actix/src/routes/: app.rs  auth.rs  personas.rs  posts.rs
aardwolf-api/: Cargo.toml
aardwolf-api/aardwolf-api-common/src/models/: direct_messages.rs
aardwolf-api/api-backend/: Cargo.toml
aardwolf-api/api-backend/src/: lib.rs  responses.rs
aardwolf-api/api-backend/src/backend_engines/: actix_backend.rs  actix_responses.rs  warp_backend.rs
aardwolf-api/api-backend/src/routes/: posts.rs
aardwolf-api/api-common/src/models/: posts.rs
aardwolf-api/api-database/: Cargo.toml
aardwolf-api/api-database/src/: api_db_routes.rs  database_main.rs  lib.rs
aardwolf-api/api-database/src/mysql/: mysql_main.rs
aardwolf-api/api-database/src/postgres/: postgres_main.rs
aardwolf-api/api-database/src/sqlite/: sqlite_main.rs
aardwolf-api/api-database/src/traits/: db_handler.rs
aardwolf-api/api-frontend/: Cargo.toml
aardwolf-api/api-frontend/src/: lib.rs
aardwolf-api/api-frontend/src/handlers/: actix_handlers.rs
aardwolf-api/backend-api/: Cargo.toml
aardwolf-api/backend-api/src/: lib.rs
aardwolf-api/backend-api/src/backend_engines/: actix_backend.rs
aardwolf-api/database-api/: README.md
aardwolf-api/database-api/src/: database_main.rs  lib.rs
aardwolf-api/database-api/src/traits/: db_handler.rs
aardwolf-api/frontend-api/: Cargo.toml  README.md  get_posts.rs
aardwolf-api/frontend-api/src/: api_user_routes.rs  lib.rs
aardwolf-api/frontend-api/src/routes/: actix_routes.rs
aardwolf-api/server-api/: README.md
aardwolf-api/src/: lib.rs
aardwolf-api/tests/: models.rs
aardwolf-localization/: Cargo.toml
aardwolf-localization/src/: example_lib.rs.txt  lib.rs
aardwolf-models/: Cargo.toml
aardwolf-models/src/: base_actor.rs  base_post.rs  test_helper.rs
aardwolf-models/src/sql_types/: post_visibility.rs
aardwolf-models/src/user/: email.rs  local_auth.rs  permissions.rs
aardwolf-models/src/user/email/: token.rs
aardwolf-models/src/user/local_auth/: password.rs
aardwolf-templates/: Cargo.toml  build.rs
aardwolf-templates/src/: first_login.rs  lib.rs  sign_in.rs  sign_up.rs
aardwolf-templates/src/elements/: input.rs  input_select.rs  input_text.rs  input_textarea.rs  mod.rs  notification_content.rs  notification_dropdown.rs
aardwolf-templates/src/home/: feed.rs  home.rs  mod.rs  nav_top.rs
aardwolf-templates/src/posts/: mod.rs  new_post.rs  reply_post.rs
aardwolf-templates/templates/: first_login.rs.html  footer.rs.html  sign_in.html  sign_in.rs.html  sign_up.html  sign_up.rs.html
aardwolf-templates/templates/asides/: settings.rs.html  shortcuts.rs.html
aardwolf-templates/templates/containers/: preferences.rs.html  profile_edit.rs.html
aardwolf-templates/templates/elements/: input_password.rs.html  notification_content.rs.html  notification_dropdown.rs.html
aardwolf-templates/templates/home/: nav_top.rs.html
aardwolf-types/: Cargo.toml
aardwolf-types/src/: csrf.rs  lib.rs  traits.rs
aardwolf-types/src/forms/: posts.rs
aardwolf-types/src/forms/auth/: signin_form.rs
aardwolf-types/src/forms/personas/: creation_form.rs
aardwolf-yew-frontend/src/: lib.rs
aardwolf-yew-frontend/src/templates/shared/: about_us.rs
config/: example.toml
doc/: AARDWOLF-SETUP.MD  SETUP-NGINX.md
doc/development-notes/: 1.Email-Functionality.md  3.Interface-Languages.md  4.ui_development.md
docker/: Dockerfile
frontend-web-assets/: README.md
locales/: TODO.yml  app.yml
src/: lib.rs  new-broken-lib.rs
tests/resources/: config-test.rs  mod-tests.rs
