[package]
name = "aardwolf-api"
version = "0.1.0"
authors = ["Banjo Fox <drbanjofox@protonmail.com>"]
description = "Backend API for Aardwolf"
edition = "2024"

[dependencies]
aardwolf-api-common = { path = "aardwolf-api-common" }
aardwolf-backend-api = { path ="backend-api" }
aardwolf-database-api = { path = "database-api" }
aardwolf-frontend-api = { path = "frontend-api" }
