[package]
name = "aardwolf-api"
version = "0.1.0"
authors = ["Banjo Fox <drbanjofox@protonmail.com>"]
description = "Backend API for Aardwolf"
edition = "2024"

[dependencies]
aardwolf-api-common = { path = "api-common" }
aardwolf-api-backend = { path ="api-backend" }
aardwolf-api-database = { path = "api-database" }
aardwolf-api-frontend = { path = "api-frontend" }
