[package]
name = "aardwolf-models"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
description = "Database interaction for the Aardwolf project"
edition = "2021"

[dependencies]
anyhow = "1.0"
bcrypt = "0.17.0"
chrono = "0.4.38"
chrono-tz = "0.10.1"
log = "0.4"
mime = "0.3"
openssl = "0.10"
serde = "1.0"
serde_json = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.11"
url = "2.5"
dotenvy ="0.15"
env_logger = "^0.11.5"
rand = "0.9.0"

[dependencies.uuid]
version = "1.10"
features = ["v4"]

[features]
default = []
test = []

[dependencies.diesel]
version = "2.2"
features = ["chrono", "postgres", "serde_json", "uuid"]

[dev-dependencies]
env_logger = "^0.11.5"
serde_derive = "1.0"
