[package]
name = "aardwolf-templates"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2021"
build = "build.rs"

[build-dependencies]
config = "0.15.7"
ructe = "0.18.2"

[dependencies]
gettext = "0.4.0"
gettext-macros = "0.6.1"
rust-i18n = { version = "3.1.2", features = ["log-miss-tr"] }

[dependencies.aardwolf-types]
version = "0.1"
path = "../aardwolf-types"

[dependencies.aardwolf-localization]
version = "0.1"
path = "../aardwolf-localization"

#-
[dependencies.aardwolf-models]
version = "0.1"
path = "../aardwolf-models"

#- 
# Start of Yew Migration?
[dependencies.aardwolf-yew-frontend]
version = "0.1.0"
path = "../aardwolf-yew-frontend"

#- 
# Adding syn for template compilation
[dependencies.syn]
version = "2.0.77"
features = ["full", "extra-traits"]

[package.metadata.i18n]
locales = ["../aardwolf-localization/locales"]
fallback = "en-us"
