[package]
name = "aardwolf-templates"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2021"
build = "build.rs"

[profile.dev]
env.OUT_DIR = "/compiled-templates"

[build-dependencies]
ructe = "0.18.2"

[dependencies]
gettext = "0.4.0"
gettext-macros = "0.6.1"
gettext-utils = "0.1.0"
rust-i18n = { version = "3.1.2", features = ["log-miss-tr"] }

[dependencies.aardwolf-types]
version = "0.1"
path = "../aardwolf-types"

[dependencies.aardwolf-models]
version = "0.1"
path = "../aardwolf-models"

[package.metadata.i18n]
base_path = "../locales"
locales = ["en-us","pl"]
fallback = "en-us"
