[package]
name = "aardwolf-templates"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2021"
build = "build.rs"

[build-dependencies]
config = "0.15.7"
ructe = "0.18.2"

[dependencies]
gettext = "0.4.0"
gettext-macros = "0.6.1"
rust-i18n = { version = "3.1.2", features = ["log-miss-tr"] }
rust-i18n-macro = "3.1.3"

[dependencies.aardwolf-types]
version = "0.1"
path = "../aardwolf-types"

[dependencies.aardwolf-models]
version = "0.1"
path = "../aardwolf-models"

[package.metadata.i18n]
base_path = "../locales"
