[package]
name = "aardwolf-api-backend"
version = "0.1.0"
edition = "2024"
authors = ["BanjoFox <drbanjofox@protonmail.com>"]
description = "Backend API for Aardwolf-Social"
license = "AGPL-3"
documentation = "https://docs.rs/aardwolf-api-backend"
repository = "https://github.com/SlantyDog/aardwolf-api"

[dependencies]
# Internal Dependencies
aardwolf-api-common = { path = "../api-common" }

# External Dependencies
actix-web = { version = "4.11.0", features = ["openssl", "rustls"], optional = true }
warp = { version = "0.3.7", optional = true }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"

[features]
default = ["actix-web"]
warp-backend = ["warp"]
