[package]
name = "aardwolf-api-database"
version = "0.1.0"
edition = "2024"

[lib]
name = "aardwolf_api_database"
path = "src/lib.rs"

[dependencies]
# Internal Dependencies
aardwolf-api-common = { path = "../api-common" }
aardwolf_models = { path = "../aardwolf-models" }

# External Dependencies
diesel = { version = "2.2.10", features = ["r2d2", "postgres", "sqlite", "mysql"] }
diesel-derive-enum = "2.1.0"
diesel_cli = { version = "2.2.10", features = ["postgres", "sqlite", "mysql"] }
serde = { version = "1.0.218", features = ["derive"] }
mysql = "26.0.0"


[dependencies.aardwolf-models]
version = "0.1"
path = "../../aardwolf-models"

[features]
default = ["postgres"]
postgres = ["diesel/postgres"]
mysql = ["diesel/mysql"]
sqlite = ["diesel/sqlite"]

